src/test/ui/wf/wf-trait-superbound.stderr
error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/wf-trait-superbound.rs:9:1
   |
LL | / trait SomeTrait<T>: ExtraCopy<T> {
LL | | }
   | |_^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = help: consider adding a `where T: std::marker::Copy` bound
note: required by `ExtraCopy`
  --> $DIR/wf-trait-superbound.rs:7:1
   |
LL | trait ExtraCopy<T:Copy> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
